<resources>
    <string name="app_name">Medicinal Plants Information</string>
    <string name="Local_name">Local Name:-</string>
    <string name="scientific_name">Scientific Name:-</string>
    <string name="family">Family:-</string>
    <string name="Description">Description:-</string>
    <string name="Distribution">Distribution:-</string>
    <string name="Medicinal_uses">Medicinal Uses:-</string>
    <string name="Benifits">Benifits:-</string>
    <string name="Side_Effects">Side Effects:-</string>
    <string name="p1">Acacia nilotica</string>
    <string name="p2">Acalypha indica</string>
    <string name="p3">Allium sativum</string>
    <string name="p4">Anethum graveolens</string>
    <string name="p5">Argyreia nervosa</string>
    <string name="p6">Asparagus racemosus</string>
    <string name="p7">Barleria Prionitis</string>
    <string name="l1">Baval</string>
    <string name="l2">Dadro</string>
    <string name="l3">Lasan</string>
    <string name="l4">Suva</string>
    <string name="l5">Vardharo</string>
    <string name="l6">Vechhekato</string>
    <string name="l7">Kantashario</string>
    <string name="s1">Vachellia nilotica</string>
    <string name="s2">Acalypha indica</string>
    <string name="s3">Allium sativum</string>
    <string name="s4"> Anethum graveolens</string>
    <string name="s5"> Argyreia nervosa</string>
    <string name="s6">Asparagus racemosus</string>
    <string name="s7">Barleria prionitis</string>
    <string name="f1">Fabaceae</string>
    <string name="f2">Euphorbiaceae</string>
    <string name="f3">Amaryllidaceae</string>
    <string name="f4">Apiaceae</string>
    <string name="f5">Convolvulaceae</string>
    <string name="f6">Asparagaceae</string>
    <string name="f7">Acanthaceae</string>
    <string name="d1">Acacia nilotica or Vachellia nilotica is a tree 5–20 m high with a dense spheric crown, stems and branches usually dark to black coloured, fissured bark, grey-pinkish slash, exuding a reddish low quality gum.The tree has thin, straight, light, grey spines in axillary pairs, usually in 3 to 12 pairs, 5 to 7.5 cm (3 in) long in young trees, mature trees commonly without thorns. The leaves are bipinnate, with 3–6 pairs of pinnulae and 10–30 pairs of leaflets each, tomentose, rachis with a gland at the bottom of the last pair of pinnulae. Flowers in globulous heads 1.2–1.5 cm in diameter of a bright golden-yellow color, set up either axillary or whorly on peduncles 2–3 cm long located at the end of the branches. Pods are strongly constricted, hairy, white-grey, thick and softly tomentose. Its seeds number approximately 8000/kg</string>
    <string name="d2">An erect annual herb that can be easily distinguished by the cup-shaped involucre that surrounds the small flowers in the catkin-like inflorescence.It can grow up to 1.2 m (3.9 ft) tall in favorable circumstances, but is usually smaller. The leaves are broad ovate, 1.2 cm–6.5 cm × 1 cm–4 cm (0.47 in–2.56 in × 0.39 in–1.57 in). The leaf base is rounded to shortly attenuate. The leaf margin is basally 5-nerved and is crenate-serrate with an acute or obtuse apex. The petiole is 1.5–5.5 cm (0.59–2.17 in) long.</string>
    <string name="d3">Allium sativum is a perennial flowering plant that grows from a bulb. It has a tall, erect flowering stem that grows up to 1 m (3 ft). The leaf blade is flat, linear, solid, and approximately 1.25–2.5 cm (0.5–1.0 in) wide, with an acute apex. The plant may produce pink to purple flowers from July to September in the Northern Hemisphere. The bulb has a strong odor and is typically made up of 10 to 20 cloves. The cloves close to the center are symmetrical, and those surrounding the center can be asymmetrical. Each clove is enclosed in an inner sheathing leaf surrounded by layers of outer sheathing leaves. If garlic is planted at the proper time and depth, it can be grown as far north as Alaska. It produces hermaphroditic flowers. It is pollinated by bees, butterflies, moths, and other insects.</string>
    <string name="d4">Anethum graveolens, or dill, is an aromatic and flavorful herb widely used in culinary dishes and traditional medicine. It is an annual herb that typically grows to a height of 40 to 60 centimeters (16 to 24 inches). Dill plants have feathery, finely divided leaves that resemble delicate fern fronds. The plant produces small, yellow flowers that form umbrella-like clusters, and eventually, it develops small, oval-shaped seeds known as dill seeds, which are used as a spice.</string>
    <string name="d5">Hawaiian baby woodrose is a perennial climbing vine that can reach lengths of up to 100 feet (30 meters).Its leaves are heart-shaped, and the plant produces large, trumpet-shaped flowers with a white to lavender color.The seeds of this plant are particularly notable; they are brown to black and contain psychoactive compounds.</string>
    <string name="d6">Asparagus racemosus is a herbaceous, perennial plant native to India and some parts of Southeast Asia. It is a climber with feathery, needle-like leaves and produces small, fragrant, and white flowers. The plant has a tuberous root system, which is the most commonly used part for medicinal purposes. The roots are long, succulent, and have a creamy-white color.</string>
    <string name="d7">
        <br>Barleria prionitis, commonly known as Porcupine Flower, is a spiny, woody shrub or small tree that can grow up to 2-3 meters in height</br>
        <br>The plant has simple, opposite leaves that are elliptic to oblong and covered with fine hairs.</br>
        <br>It produces bright orange or yellow tubular flowers that are arranged in clusters and have a spiny, cylindrical calyx.</br>
        <br>The plant is characterized by its spiny nature, with sharp, needle-like thorns found along the stems and branches.</br>

    </string>
    <string name="dt1">Acacia nilotica or Vachellia nilotica is native from Egypt, across the Maghreb and Sahel, south to Mozambique and KwaZulu-Natal, South Africa, and east through the Arabian Peninsula to the Indian subcontinent and Burma. It has become widely naturalised outside its native range including Zanzibar and Australia.It is spread by livestock.</string>
    <string name="dt2">Acalypha indica occurs widely throughout the Old World tropics. In Africa, it occurs in Nigeria in West Africa and further widely throughout tropical Africa and the Indian Ocean islands. It also occurs in India, South East Asia, Yemen, and Oceania. It has been introduced to the New World Tropics.</string>
    <string name="dt3">Allium is an ancient crop that has its origins in central Asia and is widely distributed throughout the temperate, warm temperate, and boreal zones of the northern hemisphere</string>
    <string name="dt4">Dill is native to the Mediterranean region and Southern Europe, but it is now cultivated and grown in various parts of the world. It is a popular herb in many cuisines, including European, Middle Eastern, and Indian cuisines.</string>
    <string name="dt5">Native to India, it can also be found in various parts of Southeast Asia, including Hawaii, where it has become naturalized.Due to its ornamental appeal and psychoactive properties, it has been introduced and cultivated in other regions as well.</string>
    <string name="dt6">Asparagus racemosus is primarily found in India, particularly in the Himalayan regions, as well as in other parts of South Asia. It thrives in tropical and subtropical regions.</string>
    <string name="dt7">
        <br>Barleria prionitis is native to South Asia and is found in various countries, including India, Sri Lanka, Bangladesh, Pakistan, and parts of Southeast Asia.</br>
        <br>It is well-adapted to tropical and subtropical regions and can be found in a variety of habitats, including forests, grasslands, and disturbed areas.</br>

    </string>
    <string name="m1">In traditional medicine, Acacia Nilotica is widely used. This plant has anti-microbial,anti-plasmodial and antioxidant activity and used for treatment of human immunodeficiency virus, hepatitis C virus and cancer. 7 It is useful for treatment of venereal diseases, nausea, burns and wounds, stomachache and diarrhea</string>
    <string name="m2">Based on literature studies, Acalypha indica has the capability to serve as anthelmintic, anti-inflammation, anti-bacterial, anti-cancer, anti-diabetes, anti-hyperlipidemic, anti-obesity, anti-venom, hepatoprotective, hypoxia, and wound healing medicine.</string>
    <string name="m3">Garlic cloves have antilipemic (cholesterol-lowering), antihypertensive, antimicrobial, and anticancer qualities, all of which help prevent cancer cells from forming in the stomach, liver, and other human organs , and also help with asthma, arthritis, back pain, bronchitis, chronic fever, tuberculosis, rhinitis, malaria, stubborn skin conditions including leprosy, leucoderma, skin discoloration, and itching colic, enlarged spleen, hemorrhoids, fistula, bone fracture, gout, urinary tract disease, diabetes, and kidney stone</string>
    <string name="p58">Santalum album</string>
    <string name="l58">Chandan</string>
    <string name="s58">Santalum album</string>
    <string name="f58">Santalaceae</string>
    <string name="d58">Santalum album is a small to medium-sized evergreen tree known for its aromatic heartwood, which is highly prized for its fragrance.The leaves are simple, opposite, and elliptical in shape.The tree produces small, inconspicuous flowers that are often pale yellow to purple.The heartwood of the tree, which is rich in essential oils, is the most valuable part of the plant.</string>
    <string name="dt58">Santalum album is native to the Indian subcontinent, particularly India, Sri Lanka, and certain parts of Indonesia.It is also cultivated in other tropical regions with suitable climates, such as Australia and some Pacific islands.</string>
    <string name="m58">Santalum album has a long history of use in traditional medicine systems, primarily for its aromatic heartwood:Aromatherapy: The essential oil extracted from sandalwood is used in aromatherapy for its calming and soothing properties. It is believed to reduce stress and anxiety.Skin Care: Sandalwood oil is used in skincare products and traditional remedies for its potential benefits for the skin, such as reducing acne and inflammation.Antiseptic: It is used as an antiseptic for minor wounds and skin infections.Anti-Inflammatory: Sandalwood oil is believed to have anti-inflammatory properties and is used topically for conditions like eczema and psoriasis.Sandalwood paste, made from the heartwood, is also applied topically for various skin-related issues.</string>
    <string name="se58">Sandalwood is generally considered safe for external use when used in moderate amounts.However, there are some considerations:Allergic Reactions: Some individuals may be sensitive or allergic to sandalwood oil, leading to skin irritation or allergic symptoms.Pregnancy and Nursing: Pregnant and breastfeeding women should use sandalwood oil with caution, and it\'s advisable to consult a healthcare provider.Essential Oil Purity: Ensure that you are using pure, high-quality sandalwood essential oil, as adulterated or synthetic oils may cause adverse reactions.</string>
    <string name="b58">Santalum album offers several potential benefits:Aromatherapy: Sandalwood essential oil is used in aromatherapy for its calming and stress-reducing effects.Skin Health: It is valued for its potential benefits in skincare, such as reducing acne, soothing irritation, and improving skin tone.Fragrance: Sandalwood\'s sweet and woody aroma is used in perfumes, incense, and cosmetic products.Traditional and Cultural Uses: Sandalwood has cultural and religious significance in various traditions and is used in rituals and ceremonies.</string>
</resources>